@@ -1,3 +1,8 @@
+2014-08-06  Vladimir Makarov  <vmakarov@redhat.com>
+
+	PR debug/61923
+	* gcc.target/i386/pr61923.c: New test.
+
 2014-08-06  Jakub Jelinek  <jakub@redhat.com>
 
 	PR rtl-optimization/61801
