@@ -1,3 +1,10 @@
+2014-08-06  Vladimir Makarov  <vmakarov@redhat.com>
+
+	PR debug/61923
+	* haifa-sched.c (advance_one_cycle): Fix dump.
+	(schedule_block): Don't advance cycle if we are already at the
+	beginning of the cycle.
+
 2014-08-06  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/61320
